--- a/lefun/css/index.css
+++ b/lefun/css/index.css
@@ -1,3 +1,9 @@
+
+::-webkit-scrollbar-track-piece{background-color: rgba(0,0,0,0); border-left: 1px solid rgba(0,0,0,0);}
+::-webkit-scrollbar{width: 5px; -webkit-border-radius:5px; -moz-border-radius: 5px; border-radius: 5px;}
+::-webkit-scrollbar-thumb{background-color: rgba(0,0,0,0.5); background-clip: padding-box; -webkit-border-radius:5px; -moz-border-radius: 5px; border-radius: 5px; min-height: 28px;}
+::-webkit-scrollbar-thumb:hover{background-color: rgba(0,0,0,0.5); -webkit-border-radius:5px; -moz-border-radius: 5px; border-radius: 5px;}
+
 :root{
     --main:#27ae60;
     --lightmain:#2ecc71;
@@ -11,11 +17,15 @@ body {
     margin: 0;
     padding: 0;
     font-size: 15pt;
-    color:var(--light);
+    color:var(--main);
+    overflow: hidden;
 }
 .loadmask{
+    color:var(--light);
     background-color:var(--main);
     position:fixed;
+    top:0;
+    left:0;
     height:100vh;
     width:100vw;
     animation:loadmask 1s ease-in-out;
@@ -30,10 +40,12 @@ body {
     99%{
         opacity: 0;
 width: 100vw;
+        height:100vh;
     }
     100%{
         opacity: 0;
 width:0;
+        height:0;
     }
 
 }
@@ -41,7 +53,7 @@ width:0;
     text-align: center;
     vertical-align: middle;
     overflow: hidden;
-    height:110px;
+    height:140px;
     width:100vw;
     margin-top:calc(50vh - 70px);
 }
@@ -76,4 +88,65 @@ font-size:2em;
     to{
         transform: translate(0,0);
     }
+}
+header{
+    height:40px;
+    width:100vw;
+    background-color: var(--main);
+    color: var(--light);
+}
+header h4{
+    margin:0;
+    padding:5px;
+    font-size: 1em;
+}
+main{
+    z-index: -10;
+    box-sizing: border-box;
+    height:calc(100vh - 70px - 40px);
+    width:100vw;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.lesson{
+    overflow: hidden;
+    height:auto;
+    width:80vw;
+    margin:10px auto;
+    background-image: linear-gradient(to right,#27ae60,#2ecc71);
+    border-radius: 10px;
+    padding:5px;
+    color:var(--light);
+}
+main h4{
+    margin:0;
+    padding:10px;
+}
+.myles{
+    background-position: 0 0;
+    animation: myles 5s linear infinite;
+}
+@keyframes myles {
+    from{
+        background-position: 0 0;
+    }
+    to{
+        background-position: calc(80vw + 10px) 0;
+    }
+}
+footer{
+    box-sizing: border-box;
+    height:70px;
+    width:100vw;
+    display: flex;
+}
+.navs{
+    width:50vw;
+    height:70px;
+    text-align: center;
+    color:#444;
+}
+.navimg{
+    width:40px;
+    height:40px;
 }
