--- a/lefun/css/index.css
+++ b/lefun/css/index.css
@@ -19,6 +19,8 @@ body {
     font-size: 15pt;
     color:var(--main);
     overflow: hidden;
+    height:100vh;
+    width:100vw;
 }
 .loadmask{
     color:var(--light);
@@ -53,7 +55,7 @@ width:0;
     text-align: center;
     vertical-align: middle;
     overflow: hidden;
-    height:140px;
+    height:150px;
     width:100vw;
     margin-top:calc(50vh - 70px);
 }
@@ -147,6 +149,6 @@ footer{
     color:#444;
 }
 .navimg{
-    width:40px;
-    height:40px;
+    width:35px;
+    height:35px;
 }
